# luna-qml-launcher

./: CMakeLists.txt  README.md
files/sysbus/: luna-qml-launcher.manifest.json  org.webosports.luna-qml-launcher.container.json  org.webosports.luna-qml-launcher.container.json.in  org.webosports.luna-qml-launcher.json.prv.in  org.webosports.luna-qml-launcher.json.pub.in  org.webosports.luna-qml-launcher.perm.json  org.webosports.luna-qml-launcher.role.json  org.webosports.luna-qml-launcher.role.json.in
src/: CMakeLists.txt  applicationdescription.cpp  applicationdescription.h  applicationwindow.cpp  applicationwindow.h  lunaqmlapplication.cpp  lunaqmlapplication.h  main.cpp
